# physicsRouter

./: .gitignore  DATASETS.md  DESIGN.md  README.md  RESEARCH.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
ci/baselines/: scores.json
docs/: ARCHITECTURE_ROUTER.md  AUTOROUTER_FAILURE_ANALYSIS.md  BENCHMARKS.md  CAPACITY_MESH.md  CLI.md  DEEPPCB_NOTES.md  GOLDEN_CORPUS.md  HALO_RING_ROUTING.md  HYBRID_ROUTING.md  JLCPCB_4LAYER.md  MPPC_BENCHMARK.md  QUICKSTART.md  README.md  ROUTING_DIFFICULTIES.md  SCORE_ROADMAP.md  TOPOR.md  USER_GUIDE.md  mppc_v13_route_diagnostics.json  mppc_v13_route_diagnostics.md  route_comparison.md
docs/images/kicad/: README.md
docs/images/routing_process/: README.md  bench_latest.json  drc_report.json  halo90_route.json  render_meta.json
docs/images/topor/: README.md
docs/images/viewer_compare/: viewer_2d.landmarks.json
examples/: placement_config.yaml
examples/demo/: FREEROUTING.md  board.dsn  comparison.json  comparison.md  dashboard.html  emi_geometry.json  guide_route.json  topor_route.json
examples/golden/: README.md  RESULTS.md  SOURCES.md  ci_manifest.yaml  manifest.yaml
examples/halo-90/: README.md  benchmark_results.json  placement_config.yaml  python_multipin_experiment.json  route_guide.json  route_result.json  zero_violation_compare.json  zero_violation_run.json
examples/halo-90/kicad_validation/: render_manifest.json  validation_index.json
examples/halo-90/kicad_validation/drc/: drc.json  drc_summary.json
examples/mppc-interface/: README.md  manifest.yaml  placement_config.yaml
examples/physics/: README.md  placement_config.yaml
kicad_plugins/: README.md  physics_router_action.py
native/: CMakeLists.txt  README.md
native/cmake/: OpenCL.def
native/include/pr_native/: capacity_mesh.hpp  exact.hpp  gpu.hpp  grid.hpp  router.hpp  score.hpp  types.hpp
native/kernels/: clearance.cl
native/src/: bench_main.cpp  bindings.cpp  capacity_mesh.cpp  exact.cpp  gpu_opencl.cpp  grid.cpp  router.cpp  score.cpp
scripts/: build_native.bat  build_native.sh  build_viewer_demo.py  ci_regression.py  fetch_golden_boards.sh  generate_docs_images.py  generate_kicad_renders.py  golden_corpus_analyze.py  microbench_segments.py  render_routing_process.py  render_viewer_2d.py  run_desktop_benchmarks.bat  run_mppc_benchmark.py  run_ohl_golden_gallery.py
src/physics_router/: __init__.py  capacity_mesh.py  cli.py  compare.py  config_io.py  conflict_cbs.py  continuous_improve.py  dashboard.py  design_rules.py  dsn_export.py  elastic.py  global_router.py  golden_eval.py  graph_theory.py  halo_ring.py  homotopy.py  hybrid_route.py  kicad_io.py  kicad_tools.py  models.py  native_bridge.py  negotiated_congestion.py  net_import.py  openems_export.py  physics.py  physics_feedback.py  pin_access.py  placement.py  planner.py  progress_ui.py  regeometry.py  route_diagnostics.py  route_pipeline.py  router.py  routing_strategies.py  server.py  ses_import.py  si_mfg.py  topology.py  viewer_export.py
tests/: test_capacity_mesh.py  test_clearance_enforcement.py  test_compare_and_models.py  test_continuous_improve.py  test_dense_grid_2pin.py  test_design_rules.py  test_extensive_smoke.py  test_golden_eval.py  test_golden_features.py  test_graph_theory.py  test_halo90.py  test_halo_ring.py  test_hardening.py  test_hybrid_route.py  test_integrations_pack.py  test_jlcpcb_rules.py  test_kicad_erc_drc.py  test_kicad_io.py  test_kicad_route_drc.py  test_kicad_tools.py  test_native_core.py  test_negotiated_congestion.py  test_outline_bounds.py  test_physics_extensions.py  test_physics_feedback.py  test_placement.py  test_production_routing.py  test_progress_ui.py  test_regeometry.py  test_route_diagnostics.py  test_router_drc.py  test_router_extensive.py  test_router_feedback.py  test_router_openems_import.py  test_routing_optimizations.py  test_routing_quality.py  test_server.py  test_server_routes.py  test_steiner_cut_preflight.py  test_topor_style.py  (+1 more)
tests/fixtures/: halo90_pcbnew_pads.json
tests/fixtures/golden/: simple_2net.kicad_pcb  zone_power.kicad_pcb
viewer/: dashboard.html  emi_geometry.json  index.html  viewer_data.json
viewer/assets/: README.md
