[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-router"
version = "0.1.0"
description = "Physics-aware KiCad placement and topological routing engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "physicsRouter contributors" }]
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
# Native C++ module is built via scripts/build_native.sh (CMake + pybind11), not pip.

[project.scripts]
physics-router = "physics_router.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
